20//08 IsActive user for login

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -24,11 +24,11 @@
     <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="nav-item">
       <a class="nav-link" [routerLink]="[menuItem.path]" *ngIf="!menuItem.children">
         <i class="material-icons">{{menuItem.icon}}</i>
-        <p>{{menuItem.title}}</p>
+        <p style="font-weight: 200;">{{menuItem.title}}</p>
       </a>
       <a href="javascript:void(0)" class="nav-link" *ngIf="menuItem.children" (click)="toggleMenu(menuItem)">
         <i class="material-icons">{{menuItem.icon}}</i>
-        <p>{{menuItem.title}}</p>
+        <p style="font-weight: 200;">{{menuItem.title}}</p>
         <i class="material-icons toggle-icon">{{ menuItem.open ? 'expand_less' : 'expand_more' }}</i>
       </a>
       <div class="submenu" *ngIf="menuItem.children && menuItem.open">
