--- a/src/app/view/reportuser/reportuser.component.css
+++ b/src/app/view/reportuser/reportuser.component.css
@@ -25,7 +25,7 @@
     align-items: self-start;
     color: #7B809A;
   }
-  .card-title a{
+  .card-title p{
     font-family: "Sarabun", sans-serif; 
     font-weight: 900;
     font-size: 18px;
