--- a/src/app/view/manageuser/manageuser.component.css
+++ b/src/app/view/manageuser/manageuser.component.css
@@ -26,7 +26,7 @@ h4{
   align-items: self-start;
   color: #7B809A;
 }
-.card-title a{
+.card-title p{
   font-family: "Sarabun", sans-serif; 
   font-weight: 900;
   font-size: 18px;
@@ -37,6 +37,52 @@ h4{
   right: 230px;
   top: 45px;
 }
+.toggle-container{
+  position: relative;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+.toggle-switch{
+  position: relative;
+  background-color: #ccc;
+  width: 90px;
+  height: 25px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: 0.2s ease-in;
+}
+
+
+.toggle-switch::before{
+  position: absolute;
+  content: '';
+  background-color: #fff;
+  height: 20px;
+  width: 20px;
+  border-radius: 15px;
+  margin: 2px;
+  transition: 0.2s ease-in;
+}
+input:checked + .toggle-switch{
+  background-color: green;
+}
+input:checked + .toggle-switch::before{
+  transform: translateX(65px);
+
+}
+input:not(:checked) + .toggle-switch {
+  background-color: #ff0000f1; /* สีพื้นฐานเมื่อไม่ active */
+}
+
+input:not(:checked) + .toggle-switch::before {
+  transform: translateX(0); /* ตำแหน่ง knob เมื่อไม่ active */
+}
+
+input{
+  display: none;
+}
+
 
 .card-body {
   display: flex;
