--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -2,41 +2,46 @@
   <div class="card">
     <div class="card-header "><!--card-header-danger-->
       <div class="card-title">  
-        <a href=""> จัดการผู้ใช้งาน</a>
+        <p> จัดการผู้ใช้งาน</p>
       
         <!-- <div class="sub-title">
           แสดงรายชื่อผู้ใช้งาน
         </div> -->
       </div>
-      <button class="btn btn-add position-btn">สร้างผู้ใช้</button>
+      <button class="btn btn-add ">เพิ่มผู้ใช้งาน</button>
     </div>
     <div class="card-body">
       <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
         <thead>
 
           <tr>
-            <th class="small-cell" style="text-align: center; width: 5%;">ลำดับ</th>
-            <th class="small-name">ชื่อ</th>
-            <th class="small-name">นามสกุล</th>
-            <th class="small-name">อีเมล</th>
-            <th class="small-cell">ระดับผู้ใช้งาน</th>
-            <th class="small-cell" style="color: black;  font-size: 16px; text-align: center;"><i
+            <th  style="text-align: center; width: 5%;">ลำดับ</th>
+            <th style="width: 10%;">ชื่อ</th>
+            <th style="width: 10%;">นามสกุล</th>
+            <th>อีเมล</th>
+            <th style="width: 10%;">ระดับผู้ใช้งาน</th>
+            <th  style="width: 12%;">สถานะผู้ใช้งาน</th>
+            <th  style="color: black;  font-size: 16px; text-align: center;"><i
                 class="fa fa-gear"></i></th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let users of user ; let i = index">
-            <td class="small-cell" style="text-align: center; width: 5%;">{{ i + 1 }}</td>
-            <td class="small-name"> {{ users.firstname }} </td>
-            <td class="small-name"> {{ users.lastname }} </td>
-            <td class="small-name"> {{ users.email }} </td>
-            <td class="small-cell">
+            <td  style="text-align: center; width: 5%;">{{ i + 1 }}</td>
+            <td> {{ users.firstname }} </td>
+            <td> {{ users.lastname }} </td>
+            <td> {{ users.email }} </td>
+            <td>
               <select [(ngModel)]="users.role" (change)="onRoleChange(users)">
                 <option value="user">user</option>
                 <option value="admin">admin</option>
                 <option value="superadmin">superadmin</option>
               </select>
               <!-- {{ users.role }} -->
+            </td>
+            <td class="toggle-container">
+               <input type="checkbox" id="checkbox{{i}}"  [(ngModel)]="users.isActive" (change)="updateUserStatus(users)">
+               <label for="checkbox{{i}}" class="toggle-switch" ></label>
             </td>
              <td class="small-cell-text"> 
             <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;" >
