--- a/src/app/view/profile/profile.component.css
+++ b/src/app/view/profile/profile.component.css
@@ -21,7 +21,7 @@ h4{
 
 .card-header {
   /* padding: 20px; */
-  background-color: rgb(255, 209, 0,0.2);
+  /* background-color: rgb(255, 209, 0,0.2); */
 
   display: flex;
   justify-content: space-between ;
@@ -134,7 +134,7 @@ i{
   justify-content: space-between;
 }
 .title button{
-  background-color: transparent;
+  background-color: orange;
   border: transparent;
 
 }
