--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -95,7 +95,8 @@
                             <div class="userInfo">
                                 <div class="title">
                                     <h4> ข้อมูลผู้ใช้</h4>
-                                    <button type="button" (click)=" editProfile()">แก้ไขข้อมูลส่วนตัว</button>
+                                    <button type="button" (click)=" editProfile()">
+                                        <i class="fa fa-pencil-square-o"></i>แก้ไขข้อมูล</button>
                                 </div>
                                 <div class="user-content">
                                     <div class="row">
@@ -235,6 +236,18 @@
 
                                     </div>
                                     <div class="row">
+                                        <div class="col-md-3">
+                                            <label for="">อีเมล</label>
+                                        </div>
+                                        <div class="col-md-9" *ngIf="EditStatus">
+                                            <input type="text" formControlName="email" class="form-control">
+                                        </div>
+                                        <div class="col-md-9" *ngIf="!EditStatus">
+                                            {{UserData?.email}}
+                                        </div>
+                                    </div>
+                                    <div class="row">
+
 
                                         <div class="col-md-3">
                                             <label for="">เบอร์โทร</label>
@@ -246,42 +259,8 @@
                                             {{UserData?.employeeId?.phone}}
                                         </div>
                                     </div>
-                                    <div class="row">
-                                        <div class="col-md-3">
-                                            <label for="">อีเมล</label>
-                                        </div>
-                                        <div class="col-md-9" *ngIf="EditStatus">
-                                            <input type="text" formControlName="email" class="form-control">
-                                        </div>
-                                        <div class="col-md-9" *ngIf="!EditStatus">
-                                            {{UserData?.email}}
-                                        </div>
-                                    </div>
-                                    <div class="row" *ngIf="EditStatus">
-                                        <div class="col-md-12">
-                                            <div class="title-info">
-                                                <h4>เปลี่ยนรหัสผ่าน</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row" *ngIf="EditStatus">
-                                        <div class="col-md-3">
-                                            <label for="">รหัสผ่าน</label>
-                                        </div>
-                                        <div class="col-md-9">
-                                            <input type="text" formControlName="password" class="form-control">
-                                        </div>
-
-                                    </div>
-                                    <div class="row" *ngIf="EditStatus">
-                                        <div class="col-md-3">
-                                            <label for="">ยืนยันรหัสผ่าน</label>
-                                        </div>
-                                        <div class="col-md-9">
-                                            <input type="text" formControlName=" confirmpassword" class="form-control">
-                                        </div>
-
-                                    </div>
+                                 
+              
                                     <!-- <div class="row" *ngIf="EditStatus">
                             <div class="col-md-12">
                                 <div class="title-info">
