--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -8,7 +8,7 @@
             แสดงรายชื่อผู้สร้างเอกสาร
           </div> -->
         </div>
-        <button (click)="exportToExcel()" class="btn btn-add position-btn" style="float: right;">Export to excel</button>
+        <button (click)="exportToExcel()" class="btn btn-add " style="float: right;">Export to excel</button>
       </div>
       <div class="card-body">
         <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
@@ -17,8 +17,8 @@
             <tr>
               <th class="small-cell" style="text-align: center; width: 5%;">ลำดับ</th>
               <th class="small-name">หัวข้อการสร้าง</th>
-              <th class="small-name">ชื่อ</th>
-              <th class="small-name">นามสกุล</th>
+              <th class="small-name" style=" width: 10%;">ชื่อ</th>
+              <th class="small-name" style=" width: 10%;">นามสกุล</th>
               <th class="small-name">วันที่สร้าง</th>
               <th class="small-name">เวลาที่สร้าง</th>
               <!-- <th class="small-cell">ตำเเหน่ง</th> -->
