--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -7,22 +7,20 @@
 
         <div class="modal-header card-header">
             <div class="card-title" id="myModalLabel">
-                <a href="">รายละเอียด</a>
-                <div class="sub-title">
-                    แสดงเนื้อหาเอกสาร
-                </div>
+                <p style="margin: 0;" >รายละเอียด</p>
+            
             </div>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="BackRoot()">
-                <span aria-hidden="true" style="color: black;">&times;</span>
+                <span aria-hidden="true" style="color: black;">กลับ</span>
             </button>
 
         </div>
         
         <div class="uploadFilePDF">
             <label for="fileInput" style="padding: 0 0 0 15px;">อัปโหลดไฟล์ของคุณ</label>
-             <div class="nextPage" (click)="onSignPage()">
-                ไปที่หน้าการอัปโหลด<i class="fa fa-arrow-right"></i>
-             </div>
+             <button class="nextPage" (click)="onSignPage()">
+                ไปที่หน้าการอัปโหลด<i class="fa fa-arrow-up-right-from-square"></i>
+             </button>
             <!-- <input id="fileInput" type="file" class="fileUpload" accept="application/pdf,image/*"
                 (change)="onFileSelected($event)" style="font-size: 14px;">
             <button type="button" (click)="clearFileInput()"
