--- a/src/app/view/thaicounty/thaicounty.component.html
+++ b/src/app/view/thaicounty/thaicounty.component.html
@@ -8,9 +8,9 @@
     </div> -->
     <div class="card-header" style="border-radius: 10px 10px 0 0;">
       <div class="card-title">
-        <p>  รายงานการใช้เอกสาร</p>
+        <p style="margin: 0;">  รายงานการใช้เอกสาร</p>
     </div>
-      <button class="btn btn-add position-btn">Export to excel</button>
+      <button class="btn btn-success ">Export to excel</button>
     </div>
 
 
