--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -28,9 +28,10 @@
 }
 
 .nav li.active a {
-  background-color: rgb(255, 209, 0); /* Highlight color */
-  color: white;
-  box-shadow: 0 12px 20px -10px rgba(255, 255, 255, 0.28), 0 4px 20px 0 rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(255, 235, 59, 0.2);
+
+  color: #3C4858;
+  font-weight: 0;
+
 }
 
 .nav li.active a i, .nav li.active a p {
@@ -87,6 +88,7 @@
 .nav li > a.active {
   background-color: rgb(255, 209, 0,0.5); /* Highlight color */
   color: rgb(0, 0, 0);
+  font-weight: 500;
   box-shadow: 0 12px 20px -10px rgba(255, 255, 255, 0.28), 0 4px 20px 0 rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(255, 235, 59, 0.2);
 }
 
@@ -125,3 +127,13 @@
 .toggle-icon {
   margin-left: auto;
 }
+
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
