--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -56,7 +56,7 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right" [class.show]="profileDropdownOpen"> <!-- Separate state for profile -->
           <a class="nav-link" (click)="openProfile()"><i class="fa fa-user"></i> &nbsp;จัดการผู้ใช้</a>
-          <a class="nav-link" aria-disabled="true"><i class="fa fa-gear"></i> &nbsp; ตั้งค่า</a>
+          <!-- <a class="nav-link" aria-disabled="true"><i class="fa fa-gear"></i> &nbsp; ตั้งค่า</a> -->
           <a class="nav-link" (click)="openLogin()"><i class="fa fa-sign-out"></i> &nbsp;ออกจากระบบ</a>
         </div>
       </div>
