--- a/src/app/layouts/auth-layout/forget-password/forget-password.component.css
+++ b/src/app/layouts/auth-layout/forget-password/forget-password.component.css
@@ -24,6 +24,15 @@
     margin-bottom: 15px;
     text-align: left;
   }
+  .eyePassword{
+    position: absolute;
+    right: 1.7rem;
+    top: 60%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: transparent;
+  }
+  
   
   .form-group label {
     display: block;
