--- a/src/app/layouts/auth-layout/forget-password/forget-password.component.html
+++ b/src/app/layouts/auth-layout/forget-password/forget-password.component.html
@@ -8,15 +8,27 @@
   <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="oldPassword" style="font-size: 16px;">รหัสผ่านเก่า</label>
-      <input type="password" id="oldPassword" formControlName="oldPassword" required placeholder="กรอกรหัสผ่านเก่าของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
+      <input [type]="oldPasswordFieldType" type="password" id="oldPassword" formControlName="oldPassword" required placeholder="กรอกรหัสผ่านเก่าของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
+      <button type="button" class="eyePassword" 
+      (click)="togglePasswordVisibility('oldPassword')">
+            <i [class]="oldPasswordFieldType === 'password' ? 'fa fa-eye' : 'fa fa-eye-slash'"></i>
+      </button>
     </div>
     <div class="form-group">
       <label for="newPassword" style="font-size: 16px;">รหัสผ่านใหม่</label>
-      <input type="password" id="newPassword" formControlName="newPassword" required placeholder="กรอกรหัสผ่านใหม่ของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
+      <input [type]="newPasswordFieldType" type="password" id="newPassword" formControlName="newPassword" required placeholder="กรอกรหัสผ่านใหม่ของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
+      <button type="button" class="eyePassword" 
+      (click)="togglePasswordVisibility('newPassword')">
+           <i [class]="newPasswordFieldType === 'password' ? 'fa fa-eye' : 'fa fa-eye-slash'"></i>
+     </button>
     </div>
     <div class="form-group">
       <label for="confirmNewPassword" style="font-size: 16px;">ยืนยันรหัสผ่านใหม่</label>
-      <input type="password" id="confirmNewPassword" formControlName="confirmNewPassword" required placeholder="ยืนยันรหัสผ่านใหม่ของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
+      <input [type]="confirmNewPasswordFieldType" type="password" id="confirmNewPassword" formControlName="confirmNewPassword" required placeholder="ยืนยันรหัสผ่านใหม่ของคุณ" style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
+      <button type="button" class="eyePassword" 
+      (click)="togglePasswordVisibility('confirmNewPassword')">
+           <i [class]="confirmNewPasswordFieldType === 'password' ? 'fa fa-eye' : 'fa fa-eye-slash'"></i>
+     </button>
     </div>
     <button type="submit" class="btn-submit">ยืนยัน</button>
   </form>
