--- a/src/app/view/dashboard/dashboard.component.css
+++ b/src/app/view/dashboard/dashboard.component.css
@@ -51,7 +51,7 @@ h4{
   padding: 20px;
   background-color:white !important;
   width: 100%;
-  height: 150px;
+  height: 100%; /*150px*/
   border-radius: 10px;
   margin-left: 0;
   transform: 0.3s ease-in;
@@ -319,14 +319,19 @@ height: 50px;
   padding: 30px;
   height: 100%;
 }
+.text-donut{
+  font-weight: 900;
+  width: 24%;
+}
 .donutChartBG{
   background: white;
-  height: 150px;
+  /* height: 150px; */
   border-radius: 10px ;
   padding: 20px;
+
   display: flex;
   /* flex-direction: column; */
-  align-items: center;
+  /* align-items: center; */
 }
 .chart-container {
   width: 100%; /* กำหนดขนาดของ container */
@@ -336,7 +341,7 @@ height: 50px;
   align-items: center;
 }
 #myDonutChart{
-   height:150px; 
+   max-height:123px !important; 
   width: 100%; 
 }
 canvas {
