--- a/src/app/view/profile/profile.component.css
+++ b/src/app/view/profile/profile.component.css
@@ -49,7 +49,7 @@ h4{
 }
 
 .card-body {
-  padding: 50px 40px 20px 40px !important;
+  padding: 0;
 
 }
 
@@ -127,19 +127,29 @@ i{
   cursor: pointer;
 }
 /*userInfo*/
+:host ::ng-deep .user-content .col-md-3{
+  display: flex;
+  align-items: center;
+  padding-left: 60px;
+}
 .title{
   display: flex;
   padding: 10px;
   border-bottom: 1px solid rgb(189, 186, 186);
   justify-content: space-between;
 }
-.title button{
-  background-color: orange;
-  border: transparent;
+.btn-edit{
+  color: #fff;
+  background-color: #F4A62A;
+  border-color: #f4a72a7c;
+  /* box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd; */
+  font-family: 'Sarabun', sans-serif;
 
 }
-.title button:hover{
-  text-decoration: underline;
+.btn-edit:hover{
+  background-color: #F4A62A; 
+  border-color: #4f3000;
+  /* box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51; */
 }
 .userInfo{
   margin-bottom: 10px;
@@ -202,8 +212,8 @@ justify-content: center;
   display: flex;
   height: 40px;
   width: 40px;
-  bottom: 10px; /* ติดกับขอบล่างของภาพ */
-  right: 10px;
+  bottom: 5px; /* ติดกับขอบล่างของภาพ */
+  right: 30px;
   align-items: center;
   justify-content: center;
 
@@ -337,6 +347,8 @@ input{
   border-color: #00087c9f;
   /* box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51; */
 }
+
+
 :host ::ng-deep .btn.btn-primary {
   /* background-color: #24a0ed;
   color: white;
