--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -5,7 +5,7 @@
         <div class="card">
             <div class="card-header">
                 <h4 class="card-title">การจัดการผู้ใช้งาน</h4>
-                <button class="btn btn-primary" (click)="goToChangePassword()">เปลี่ยนรหัสผ่าน</button>
+                <button class="btn btn-add" (click)="goToChangePassword()">เปลี่ยนรหัสผ่าน</button>
             </div>
 
             <div class="card-body">
@@ -78,7 +78,7 @@
                                     ระดับผู้ใช้งาน : {{UserData?.role}}
                                 </a>
                                 <a>
-                                    ชื่อ : {{ UserData?.employeeId?.firstname }} นามสกุล :
+                                    ชื่อ-นามสกุล : {{ UserData?.employeeId?.firstname }}  &nbsp;
                                     {{UserData?.employeeId?.lastname}}
                                 </a>
                                 <a>
@@ -95,23 +95,27 @@
                             <div class="userInfo">
                                 <div class="title">
                                     <h4> ข้อมูลผู้ใช้</h4>
-                                    <button type="button" (click)=" editProfile()">
-                                        <i class="fa fa-pencil-square-o"></i>แก้ไขข้อมูล</button>
+                                    <button type="button" class="btn btn-edit" (click)=" editProfile()">
+                                        <i class="fa fa-pencil-square-o"></i> &nbsp; แก้ไขข้อมูล</button>
                                 </div>
                                 <div class="user-content">
                                     <div class="row">
                                         <div class="col-md-3">
-                                            <label for="">ชื่อ</label>
+                                            <label for="">ชื่อ-นามสกุล</label>
                                         </div>
-                                        <div class="col-md-9" *ngIf="EditStatus">
-                                            <input type="text" formControlName="firstname" class="form-control">
+                                        <div class="col-md-5" *ngIf="EditStatus">
+                                            <input type="text" formControlName="firstname" class="form-control" placeholder="ชื่อ">
+                               
+                                        </div>
+                                        <div class="col-md-4"*ngIf="EditStatus">
+                                            <input type="text" formControlName="lastname" class="form-control" placeholder="นามสกุล">
                                         </div>
                                         <div class="col-md-9" *ngIf="!EditStatus">
-                                            {{UserData?.employeeId?.firstname}}
+                                            {{UserData?.employeeId?.firstname}}  &nbsp;   {{UserData?.employeeId?.lastname}}
                                         </div>
 
                                     </div>
-                                    <div class="row">
+                                    <!-- <div class="row">
                                         <div class="col-md-3">
                                             <label for="">นามสกุล</label>
                                         </div>
@@ -121,7 +125,7 @@
                                         <div class="col-md-9" *ngIf="!EditStatus">
                                             {{UserData?.employeeId?.lastname}}
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="group-info">
                                         <div class="title-info">
                                             <h4>ข้อมูลสถานที่ทำงาน</h4>
@@ -131,7 +135,7 @@
                                                 <label for="">บริษัท/องค์กร</label>
                                             </div>
                                             <div class="col-md-9" *ngIf="EditStatus">
-                                                <input type="text" formControlName="organization" class="form-control">
+                                                <input type="text" formControlName="organization" class="form-control" placeholder="บริษัท/องค์กร">
                                             </div>
                                             <div class="col-md-9" *ngIf="!EditStatus">
                                                 {{UserData?.employeeId?.organization}}
@@ -142,53 +146,10 @@
                                                 <label for="">ที่อยู่</label>
                                             </div>
                                             <div class="col-md-9" *ngIf="EditStatus">
-                                                <input type="text" formControlName="address" class="form-control">
+                                                <input type="text" formControlName="address" class="form-control" placeholder="ที่อยู่">
                                             </div>
                                             <div class="col-md-9" *ngIf="!EditStatus">
                                                 {{UserData?.employeeId?.address}}
-                                            </div>
-
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-3">
-                                                <label for=""></label>
-                                            </div>
-                                            <div class="col-md-5 select-wrapper" *ngIf="EditStatus">
-                                                ตำบล :
-                                                <select class="form-select" formControlName="tambon"
-                                                    (focus)="istAmbonSelectOpen = true"
-                                                    (blur)="istAmbonSelectOpen = false"
-                                                    (change)="onTambonChange($event.target.value)"
-                                                    [attr.disabled]="isTambonDisabled ? true : null">
-                                                    <option *ngFor="let tambon of tambons" [value]="tambon.id">{{
-                                                        tambon.name_th }}</option>
-                                                </select>
-                                                <div class="iconSelect" [class.rotate]="istAmbonSelectOpen">
-                                                    <i class="fa fa-chevron-down"></i>
-                                                </div>
-                                                <!-- <input type="text"formControlName="tambon" class="form-control" placeholder="ตำบล"> -->
-                                            </div>
-                                            <div class="col-md-4 select-wrapper" *ngIf="EditStatus">
-                                                อำเภอ :
-                                                <select class="form-select" formControlName="amphure"
-                                                    (focus)="isAmphureSelectOpen = true"
-                                                    (blur)="isAmphureSelectOpen = false"
-                                                    (change)="onAmphuresChange($event.target.value)"
-                                                    [attr.disabled]="isAmphureDisabled ? true : null">
-                                                    <option *ngFor="let amphure of amphures" [value]="amphure.id">{{
-                                                        amphure.name_th}}</option>
-                                                </select>
-
-                                                <div class="iconSelect" [class.rotate]="isAmphureSelectOpen">
-                                                    <i class="fa fa-chevron-down"></i>
-                                                </div>
-                                                <!-- <input type="text"formControlName="amphure" class="form-control" placeholder="อำเภอ"> -->
-                                            </div>
-                                            <div class="col-md-5" *ngIf="!EditStatus">
-                                                ตำบล/แขวง : {{getTambonName(UserData?.employeeId?.tambon)}}
-                                            </div>
-                                            <div class="col-md-4" *ngIf="!EditStatus">
-                                                อำเภอ : {{getAmphureName(UserData?.employeeId?.amphure)}}
                                             </div>
 
                                         </div>
@@ -211,6 +172,52 @@
                                                 </div>
                                                 <!-- <input type="text" formControlName="province" class="form-control" placeholder="จังหวัด"> -->
                                             </div>
+                                        
+                                            <div class="col-md-4 select-wrapper" *ngIf="EditStatus">
+                                                อำเภอ/เขต :
+                                                <select class="form-select" formControlName="amphure"
+                                                    (focus)="isAmphureSelectOpen = true"
+                                                    (blur)="isAmphureSelectOpen = false"
+                                                    (change)="onAmphuresChange($event.target.value)"
+                                                    [attr.disabled]="isAmphureDisabled ? true : null">
+                                                    <option *ngFor="let amphure of amphures" [value]="amphure.id">{{
+                                                        amphure.name_th}}</option>
+                                                </select>
+
+                                                <div class="iconSelect" [class.rotate]="isAmphureSelectOpen">
+                                                    <i class="fa fa-chevron-down"></i>
+                                                </div>
+                                                <!-- <input type="text"formControlName="amphure" class="form-control" placeholder="อำเภอ"> -->
+                                            </div>
+                                            <div class="col-md-5" *ngIf="!EditStatus">
+                                                ตำบล/แขวง : {{getTambonName(UserData?.employeeId?.tambon)}}
+                                            </div>
+                                            <div class="col-md-4" *ngIf="!EditStatus">
+                                                อำเภอ/เขต : {{getAmphureName(UserData?.employeeId?.amphure)}}
+                                            </div>
+
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-3">
+                                                <label for=""></label>
+                                            </div>
+
+                                            <div class="col-md-5 select-wrapper" *ngIf="EditStatus">
+                                                ตำบล/แขวง :
+                                                <select class="form-select" formControlName="tambon"
+                                                    (focus)="istAmbonSelectOpen = true"
+                                                    (blur)="istAmbonSelectOpen = false"
+                                                    (change)="onTambonChange($event.target.value)"
+                                                    [attr.disabled]="isTambonDisabled ? true : null">
+                                                    <option *ngFor="let tambon of tambons" [value]="tambon.id">{{
+                                                        tambon.name_th }}</option>
+                                                </select>
+                                                <div class="iconSelect" [class.rotate]="istAmbonSelectOpen">
+                                                    <i class="fa fa-chevron-down"></i>
+                                                </div>
+                                                <!-- <input type="text"formControlName="tambon" class="form-control" placeholder="ตำบล"> -->
+                                            </div>
+                                         
 
                                             <div class="col-md-4" *ngIf="EditStatus">
                                                 รหัสไปรษณีย์ :
@@ -240,7 +247,7 @@
                                             <label for="">อีเมล</label>
                                         </div>
                                         <div class="col-md-9" *ngIf="EditStatus">
-                                            <input type="text" formControlName="email" class="form-control">
+                                            <input type="text" formControlName="email" class="form-control" placeholder="อีเมล">
                                         </div>
                                         <div class="col-md-9" *ngIf="!EditStatus">
                                             {{UserData?.email}}
@@ -250,10 +257,10 @@
 
 
                                         <div class="col-md-3">
-                                            <label for="">เบอร์โทร</label>
+                                            <label for="">เบอร์โทรศัพท์</label>
                                         </div>
                                         <div class="col-md-9" *ngIf="EditStatus">
-                                            <input type="text" formControlName="phone" class="form-control">
+                                            <input type="text" formControlName="phone" class="form-control" placeholder="เบอร์โทรศัพท์">
                                         </div>
                                         <div class="col-md-9" *ngIf="!EditStatus">
                                             {{UserData?.employeeId?.phone}}
