--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -7,7 +7,7 @@
             แสดงรายชื่อผู้เข้าใช้งานระบบ
         </div> -->
       </div>
-      <button (click)="exportToExcel()" class="btn btn-add " style="float: right;">Export to excel</button>
+      <button (click)="exportToExcel()" class="btn btn-success " style="float: right;">Export to excel</button>
     </div>
     <div class="card-body">
       <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
