--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -8,7 +8,7 @@
             แสดงรายชื่อผู้สร้างเอกสาร
           </div> -->
         </div>
-        <button (click)="exportToExcel()" class="btn btn-add " style="float: right;">Export to excel</button>
+        <button (click)="exportToExcel()" class="btn btn-success " style="float: right;">Export to excel</button>
       </div>
       <div class="card-body">
         <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
