--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -103,6 +103,10 @@
                     </td>
 
                     <td class="text-center" style=" width:1% ;white-space: nowrap;">
+                      <button (click)="openDataDetail(item?._id)" style="border: none; background: none; color: black;">
+                        <i  data-toggle="tooltip" title="ดูรายละเอียดเอกสาร" data-placement="top"
+                         class="fa fa-pencil"></i>
+                      </button>
 
                       <button *ngIf="!item.record_filename" (click)="onRecord(item?._id)" style="border: none; background: none; color: black;">
                         <i data-toggle="tooltip" title="การจดบันทึก" data-placement="top"
@@ -111,7 +115,7 @@
 
 
                       <button *ngIf="!item.record_filename" (click)="openDetailModal(item?._id)" style="border: none; background: none; color: black;">
-                        <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
+                        <i data-toggle="tooltip" title="เพิ่มเนื้อหา" data-placement="top"
                           class="fa fa-file-text-o ModalIcon "></i>
                       </button>
 
@@ -120,7 +124,7 @@
 
                       <button *ngIf="item.record_filename" style="border: none; background: none; color: black; ">
 
-                        <i class="fa fa-file-pdf-o PDF" (click)="showPDF(item.record_filename)"></i>
+                        <i class="fa  fa-file-pdf-o" (click)="showPDF(item.record_filename)"></i>
 
                       </button>
                     </td>
