--- a/src/app/view/manageuser/manageuser.component.css
+++ b/src/app/view/manageuser/manageuser.component.css
@@ -215,3 +215,34 @@ td select option {
   font-size: 14px;
   color: black;
 }
+.custom-role-display {
+  display: inline-block;
+  width: 100%;
+  padding: 0px 10px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 32px; /* ปรับให้เหมือนกับ select */
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  text-align: center; /* ให้ข้อความอยู่กลาง */
+}
+.button-group {
+  display: flex;
+  gap: 10px; /* ระยะห่างระหว่างปุ่ม */
+}
+
+.btn-export {
+  background-color: #28a745; /* สีปุ่ม */
+  color: purple;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-export:hover {
+  background-color: #218838; /* สีเมื่อ hover */
+}
