--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -9,6 +9,7 @@
         </div> -->
       </div>
       <button class="btn btn-add ">เพิ่มผู้ใช้งาน</button>
+      <!-- <button class="btn btn-export" (click)="exportToExcel()">Export to Excel</button> -->
     </div>
     <div class="card-body">
       <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
@@ -32,12 +33,15 @@
             <td> {{ users.lastname }} </td>
             <td> {{ users.email }} </td>
             <td>
-              <select [(ngModel)]="users.role" (change)="onRoleChange(users)">
-                <option value="user">user</option>
-                <option value="admin">admin</option>
-                <option value="superadmin">superadmin</option>
-              </select>
-              <!-- {{ users.role }} -->
+              <ng-container *ngIf="users.role === 'superadmin'; else roleDropdown">
+                <span class="custom-role-display">superadmin</span>
+              </ng-container>
+              <ng-template #roleDropdown>
+                <select [(ngModel)]="users.role" (change)="onRoleChange(users)" class="custom-role-display">
+                  <option value="user">user</option>
+                  <option value="admin">admin</option>
+                </select>
+              </ng-template>
             </td>
             <td class="toggle-container">
                <input type="checkbox" id="checkbox{{i}}"  [(ngModel)]="users.isActive" (change)="updateUserStatus(users)">
