--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -1,44 +1,39 @@
 <div class="main-content">
-  <div class="card">
-    <!-- <div>
-      <button type="button" class="close" data-dismiss="modal" aria-label="fa-arrow-left" (click)="BackRoot()">
-        <span aria-hidden="true">&times;</span>
-    </button>
-    </div> -->
 
-    <div class="card-header">
-      <label for="fileInput" style="padding: 0 0 0 15px;">อัปโหลดไฟล์ของคุณ</label>
+  <div class="uploadFilePDF">
+    <input id="fileInput" type="file" class="fileUpload" accept="application/pdf,image/*"
+      (change)="onFileSelected($event)" style="font-size: 14px;">
+    <button type="button" class="btn-clearInput" (click)="clearFileInput()">
+      <i class="fa fa-times"></i>
+    </button>
+  </div>
+
+  <!-- <form [formGroup]="uploadForm">
       <div class="uploadFilePDF">
         <input id="fileInput" type="file" class="fileUpload" accept="application/pdf,image/*"
-          (change)="onFileSelected($event)" style="font-size: 14px;">
+          (change)="onFileSelected($event)" style="font-size: 14px;" formControlName="file">
         <button type="button" class="btn-clearInput" (click)="clearFileInput()">
           <i class="fa fa-times"></i>
         </button>
       </div>
-    </div>
+    </form> -->
 
-
+  <div class="card">
 
     <div class="card-body">
       <div class="signTool-content" *ngIf="loading">
         <div class="pageNumber">
-          จำนวนหน้า: {{ totalPage }}
+          จำนวนหน้า: {{pageVariable}} / {{ totalPage }}
         </div>
 
         <div class="pageNext">
           <button class="btn-custom" type="button" (click)="prevPage()">
             <i class="fa fa-arrow-left"></i>
           </button>
-        
-          <input
-            class="form-control page-display"
-            type="number"
-            [(ngModel)]="pageVariable"
-            [min]="1"
-            [max]="totalPage"
-            (change)="onPageChange()"
-          />
-        
+
+          <input class="form-control page-display" type="number" [(ngModel)]="pageVariable" [min]="1" [max]="totalPage"
+            (change)="onPageChange()" />
+
           <button class="btn-custom" type="button" (click)="nextPage()">
             <i class="fa fa-arrow-right"></i>
           </button>
@@ -46,14 +41,15 @@
 
 
         <button *ngIf="step == 0" (click)="choseTypeSignature('pin')" style="height: 40px;" type="button"
-          class="btn btn-add">ลงนามเอกสาร</button>
+          class="btn btn-add ">ลงนามเอกสาร</button>
+
         <button *ngIf="step == 0 && user_ca" (click)="choseTypeSignature('ca')" style="height: 40px;" type="button"
           class="btn btn-add ms-2">ลงนามอิเล็กทรอนิกส์</button>
 
         <button *ngIf="step == 1" (click)="startMarkSign()" [disabled]="stageMarkSign" style="height: 40px;"
           type="button" class="btn btn-secondary">วางตำแหน่งลายเซ็น</button>
 
-        <div *ngIf="dragList.length > 1 && typeSignature == 'pin'" class="signature-container mt-2">
+        <div *ngIf="dragList.length > 1 && typeSignature == 'pin'" class="signature-container">
           <signature-pad *ngIf="!useProfileSign" [options]="signaturePadOptions" (onBeginEvent)="drawStart()"
             (onEndEvent)="drawComplete()">
           </signature-pad>
@@ -70,14 +66,14 @@
 
         <div class="submit-content">
           <button (click)="submitSign()" *ngIf="dragList.length > 1 && typeSignature == 'pin'"
-            [disabled]="dragList.length == 1" style="height: 40px;" class="btn btn-success">ยืนยันการลงนาม
+            [disabled]="dragList.length == 1" style="height: 40px;" class="btn btn-success">ลงนามเอกสาร
           </button>
           <button *ngIf="dragList.length > 1 && typeSignature == 'pin'" [disabled]="dragList.length == 1"
             (click)="clearSignature()" class="btn btn-danger ms-2" style="height: 40px;">
             เคลียร์
           </button>
         </div>
-     
+
 
         <div *ngIf="dragList.length > 1 && typeSignature == 'ca'" class="mt-1">
           รหัส CA : <input class="form-control col-4 col-sm-2 col-md-2 col-lg-1" type="text" [(ngModel)]="caPass" />
@@ -95,34 +91,33 @@
           class="btn btn-success">ยืนยันการลงนาม</button>
         <button *ngIf="step == 2" (click)="reload()" style="height: 40px;" type="button"
           class="btn btn-danger ms-2">ลงนามเอกสารอีกครั้ง</button>
-      </div>
+      
 
-      <div class="pageFile"  *ngIf="selectedFile">
+      <div class="pageFile" *ngIf="selectedFile">
         <div class="mt-2" *ngIf="loading">
           <pdf-viewer *ngIf="step == 1 || step == 0" [src]="pdfFile" [render-text]="false" [original-size]="true"
             [show-all]="false" [(page)]="pageVariable" (pages-initialized)="pageInitialized($event)"
             (click)="selectEle($event)" [ngClass]="{'cursor-copy': stageMarkSign}" style="display: block;"></pdf-viewer>
-  
+            
           <pdf-viewer *ngIf="step == 2" [src]="signaturedFile" [render-text]="false" [original-size]="true"
             [show-all]="false" [(page)]="pageVariable" (pages-initialized)="pageInitialized($event)"
             (click)="selectEle($event)" [ngClass]="{'cursor-copy': stageMarkSign}" style="display: block;"></pdf-viewer>
-  
+
           <div class="example-box" #cdkDrag_ cdkDragBoundary=".canvasWrapper" cdkDrag
             *ngFor="let item of dragList; let i=index" [cdkDragFreeDragPosition]="item.position"
             (cdkDragEnded)="dragEnd($event)" [id]="item.id" style="display: none; position: relative;">
             <span>{{item.name}}</span>
             <div class="position-absolute" style="top: -8px; right: -8px;">
               <i class="pr-0 icon-close icons deleteBtn" (click)="remove(item.id, item.page)"></i>
-            </div>
+            </div>  
           </div>
+
+
         </div>
       </div>
     </div>
 
-
+  </div>
   </div>
 
 </div>
-
-
-
