--- a/src/app/view/manageuser/profileuser/profileuser.component.html
+++ b/src/app/view/manageuser/profileuser/profileuser.component.html
@@ -1,5 +1,13 @@
 <div class="main-content">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
+          <li class="breadcrumb-item"><a [routerLink]="['/manageuser']">จัดการผู้ใช้งาน</a></li>
+          <li class="breadcrumb-item active"><a aria-current="page" >รายละเอียดผู้ใช้งาน</a></li>
+        </ol>
+      </nav>
     <div class="container-fluid">
+      
 
         <div class="card">
             <div class="navigate-bar">
