--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -1,4 +1,10 @@
 <div class="main-content">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
+      <li class="breadcrumb-item active"><a aria-current="page" > จัดการผู้ใช้งาน</a></li>
+    </ol>
+  </nav>
   <div class="card">
     <div class="card-header "><!--card-header-danger-->
       <div class="card-title">  
