--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -1,4 +1,10 @@
 <div class="main-content">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
+          <li class="breadcrumb-item active"><a aria-current="page" >หน้าผู้ใช้งาน</a></li>
+        </ol>
+      </nav>
     <div class="container-fluid">
 
 
@@ -24,7 +30,7 @@
 
                                 <div class="modal-overlay" *ngIf="showModal">
                                     <div class="modal-content">
-                                        <div class="card-header">
+                                        <div class="card-header" style="padding: 0;">
                                             <a>เปลี่ยนรูปภาพโปรไฟล์</a>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                                                 (click)="closeModal()">
