--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -1,9 +1,15 @@
 <!-- <div *ngIf="isSuperAdmin"></div> -->
 <div class="main-content">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
+      <li class="breadcrumb-item active"><a aria-current="page" > รายงานการสร้างเอกสาร</a></li>
+    </ol>
+  </nav>
     <div class="card">
       <div class="card-header "> <!--card-header-danger-->
         <div class="card-title"> 
-          <a href=""> รายงานการสร้างเอกสาร</a>
+          <p href=""> รายงานการสร้างเอกสาร</p>
           <!-- <div class="sub-title">
             แสดงรายชื่อผู้สร้างเอกสาร
           </div> -->
