--- a/src/app/view/table-main/data-detail/data-detail.component.html
+++ b/src/app/view/table-main/data-detail/data-detail.component.html
@@ -1,4 +1,11 @@
 <div class="main-content">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
+          <li class="breadcrumb-item"><a [routerLink]="['/table-main']">การลงตรวจอิเล็กทรอนิค</a></li>
+          <li class="breadcrumb-item active"><a aria-current="page">รายละเอียดเนื้อหาที่สร้าง</a></li>
+        </ol>
+      </nav>
     <div class="container-fluid">
         <div class="card">
             <div class="navigate-bar">
