--- a/src/app/view/thaicounty/thaicounty.component.html
+++ b/src/app/view/thaicounty/thaicounty.component.html
@@ -20,7 +20,7 @@
           <tr>
             <th>จังหวัด</th>
             <th>จำนวนเอกสาร</th>
-            <th>จำนวนเอกสารที่ถูกเซ็น</th>
+            <th>จำนวนเอกสารที่ลงนามแล้ว</th>
             <th>เปอร์เซ็นต์</th>
           </tr>
         </thead>
