--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -1,49 +1,34 @@
-<!-- <div *ngIf="isSuperAdmin"></div> -->
 <div class="main-content">
-    <div class="card">
-      <div class="card-header "> <!--card-header-danger-->
-        <div class="card-title"> 
-          <a href=""> รายงานการสร้างเอกสาร</a>
-          <!-- <div class="sub-title">
-            แสดงรายชื่อผู้สร้างเอกสาร
-          </div> -->
-        </div>
-        <button (click)="exportToExcel()" class="btn btn-add " style="float: right;">Export to excel</button>
+  <div class="card">
+    <div class="card-header">
+      <div class="card-title">
+        <a href="">รายงานการสร้างเอกสาร</a>
       </div>
-      <div class="card-body">
-        <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
-          <thead>
-  
-            <tr>
-              <th class="small-cell" style="text-align: center; width: 5%;">ลำดับ</th>
-              <th class="small-name">หัวข้อการสร้าง</th>
-              <th class="small-name" style=" width: 10%;">ชื่อ</th>
-              <th class="small-name" style=" width: 10%;">นามสกุล</th>
-              <th class="small-name">วันที่สร้าง</th>
-              <th class="small-name">เวลาที่สร้าง</th>
-              <!-- <th class="small-cell">ตำเเหน่ง</th> -->
-              <!-- <th class="small-cell" style="color: black;  font-size: 16px; text-align: center;"><i
-                  class="fa fa-gear"></i></th> -->
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let users of user ; let i = index">
-              <td class="small-cell" style="text-align: center; width: 5%;">{{ i + 1 }}</td>
-              <td class="small-name"> {{ users.record_topic }} </td>
-              <td class="small-name"> {{ users.firstname }} </td>
-              <td class="small-name"> {{ users.lastname }} </td>
-              <td class="small-name"> {{ users.createdDate }} </td>
-              <td class="small-name"> {{ users.createdTime }} </td>
-              <!-- <td class="small-cell"> {{ users.role }} </td> -->
-              <!-- <td class="small-cell-text">
-              <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;" >
-                <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
-                  class="fa fa-file-text-o ModalIcon "></i>
-              </button>
-            </td> -->
-              </tr>
-            </tbody>
-        </table>
-      </div>
+      <button (click)="exportToExcel()" class="btn btn-add" style="float: right;">Export to excel</button>
+    </div>
+    <div class="card-body">
+      <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
+        <thead>
+          <tr>
+            <th class="small-cell" style="text-align: center; width: 5%;">ลำดับ</th>
+            <th class="small-name">หัวข้อการสร้าง</th>
+            <th class="small-name" style="width: 10%;">ชื่อ</th>
+            <th class="small-name" style="width: 10%;">นามสกุล</th>
+            <th class="small-name">วันที่สร้าง</th>
+            <th class="small-name">เวลาที่สร้าง</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let userDocument of userDocuments; let i = index">
+            <td class="small-cell" style="text-align: center; width: 5%;">{{ i + 1 }}</td>
+            <td class="small-name">{{ userDocument.record_topic }}</td>
+            <td class="small-name">{{ userDocument.firstname }}</td>
+            <td class="small-name">{{ userDocument.lastname }}</td>
+            <td class="small-name">{{ userDocument.createdDate }}</td>
+            <td class="small-name">{{ userDocument.createdTime }}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
+</div>
