--- a/src/app/layouts/auth-layout/login/login.component.html
+++ b/src/app/layouts/auth-layout/login/login.component.html
@@ -17,7 +17,7 @@
 
     <div class="footer-links">
       <!-- <a (click)="openFogetPassword()" class="forgot-password-link"  style="font-size: 14px;">ลืมรหัสผ่าน</a> -->
-      <a (click)="openRegister()" class="register-link" style="font-size: 14px;">สมัครสมาชิก</a>
+      <!-- <a (click)="openRegister()" class="register-link" style="font-size: 14px;">สมัครสมาชิก</a> -->
     </div>
   </div>
   
