--- a/src/app/view/manageuser/addperson/addperson.component.html
+++ b/src/app/view/manageuser/addperson/addperson.component.html
@@ -2,7 +2,7 @@
 <div class="register-card">
     <div class="row">
       <div class="col-sm-12">
-        <h2>เพิ่มผู้ใช้งาน</h2>
+        <h2>เพิ่มองค์กร</h2>
       </div>
   
       <div class="col-sm-12">
