--- a/src/app/view/manageuser/manageuser.component.css
+++ b/src/app/view/manageuser/manageuser.component.css
@@ -26,7 +26,7 @@ h4{
   align-items: self-start;
   color: #7B809A;
 }
-.card-title p{
+.card-title a{
   font-family: "Sarabun", sans-serif; 
   font-weight: 900;
   font-size: 18px;
@@ -37,52 +37,6 @@ h4{
   right: 230px;
   top: 45px;
 }
-.toggle-container{
-  position: relative;
- display: flex;
- align-items: center;
- justify-content: center;
-}
-.toggle-switch{
-  position: relative;
-  background-color: #ccc;
-  width: 90px;
-  height: 25px;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: 0.2s ease-in;
-}
-
-
-.toggle-switch::before{
-  position: absolute;
-  content: '';
-  background-color: #fff;
-  height: 20px;
-  width: 20px;
-  border-radius: 15px;
-  margin: 2px;
-  transition: 0.2s ease-in;
-}
-input:checked + .toggle-switch{
-  background-color: green;
-}
-input:checked + .toggle-switch::before{
-  transform: translateX(65px);
-
-}
-input:not(:checked) + .toggle-switch {
-  background-color: #ff0000f1; /* สีพื้นฐานเมื่อไม่ active */
-}
-
-input:not(:checked) + .toggle-switch::before {
-  transform: translateX(0); /* ตำแหน่ง knob เมื่อไม่ active */
-}
-
-input{
-  display: none;
-}
-
 
 .card-body {
   display: flex;
@@ -214,35 +168,4 @@ td select option {
   font-family: 'Sarabun', sans-serif;
   font-size: 14px;
   color: black;
-}
-.custom-role-display {
-  display: inline-block;
-  width: 100%;
-  padding: 0px 10px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #555;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 32px; /* ปรับให้เหมือนกับ select */
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  text-align: center; /* ให้ข้อความอยู่กลาง */
-}
-.button-group {
-  display: flex;
-  gap: 10px; /* ระยะห่างระหว่างปุ่ม */
-}
-
-.btn-export {
-  background-color: #28a745; /* สีปุ่ม */
-  color: purple;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.btn-export:hover {
-  background-color: #218838; /* สีเมื่อ hover */
 }
