--- a/src/app/view/manageuser/addperson/addperson.component.html
+++ b/src/app/view/manageuser/addperson/addperson.component.html
@@ -6,7 +6,7 @@
       </div>
   
       <div class="col-sm-12">
-        <form [formGroup]="regisForm" (ngSubmit)="onSubmit(regisForm.data)">
+        <form [formGroup]="regisForm" (ngSubmit)="onSubmit(regisForm.value)">
           <div class="row box">
             <div class="col-sm-12" style="padding-right: 0;">
               <div class="form-group">
